Fix metadata list alignment.

--- a/design/sass/style.scss
+++ b/design/sass/style.scss
@@ -262,6 +262,8 @@ article {
             padding: {
                 top: 1em;
                 bottom: 0;
+                left: 0;
+                right: 0;
             }
             margin-bottom: 0;
             li {
